# Resume-Tailorator

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  README.md  main.py  pyproject.toml  resume-tailor.sh  setup.cfg
.claude/: settings.json
.github/: copilot-instructions.md
.github/agents/: README.agent.md  lead-software-engineer.agent.md  orchestrator.agent.md  senior-devops-engineer.agent.md  senior-qa-engineer.agent.md  senior-security-engineer.agent.md  senior-software-engineer-implementation.agent.md  senior-software-engineer-reviewer.agent.md  technical-writer.agent.md
.github/instructions/: api.instructions.md  commit.instructions.md  pydantic-ai-agents.instructions.md  pydantic-ai-embeddings.instructions.md  pydantic-ai-input.instructions.md  pydantic-ai-mcp.instructions.md  pydantic-ai-models.instructions.md  pydantic-ai-testing.instructions.md  pydantic-ai-tools.instructions.md  pydantic-ai-workflows.instructions.md  pytest.instructions.md  python.instructions.md  skills.instructions.md
.github/prompts/: README.md  code-review.prompt.md  create-api-endpoint.prompt.md  create-pr-description.prompt.md  feature-implementation.prompt.md  fix-bug.prompt.md  model-recommendation.prompt.md  refactor-code.prompt.md  (+3 more)
docs/: AGENTS.md  DEVELOPER.md  index.md
files/: resume.md
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
memory/: models.py  repository.py  service.py  sqlite_repository.py
openspec/: config.yaml
resume_tailorator/: main.py
tests/: conftest.py  factories.py  test_cli_typer.py  test_job_scraper.py  test_job_scraper_fetch.py  test_job_scraper_integration.py  test_main.py  test_parsing_determinism.py  test_pattern_resolution.py  test_quality_gate.py  test_resume_converter.py  test_resume_output_converter.py  test_verbose_agent.py
utils/: validate_inputs.py
workflows/: __init__.py  agents.py
(+48 files in other folders)
