[project]
name = "resume-tailorator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "html2text>=2025.4.15",
    "markdown>=3.10",
    "markdown-pdf>=1.10",
    "markitdown[docx,pdf]>=0.1.0",
    "playwright>=1.56.0",
    "pydantic-ai>=1.24.0",
    "python-docx>=1.1.0",
    "rich>=14.2.0",
    "typer>=0.25.1",
]

[dependency-groups]
dev = [
    "anyio>=4.11.0",
    "pytest>=8.0.0",
    "pytest-anyio>=0.0.0",
    "pytest-subtests>=0.13.0",
    "ruff>=0.14.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
